--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{yml,json}]
+[*.{yml,json,html}]
 indent_size = 2
 
 [*.md]
