--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 jdk:
 - oraclejdk8
 
-script: mvn -B clean package
+script: mvn -B package
 after_success:
 - bash .travis-update-website.sh
 
