--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         </repository>
         <repository>
             <id>dmulloy2-repo</id>
-            <url>http://repo.dmulloy2.net/content/groups/public/</url>
+            <url>http://repo.dmulloy2.net/content/repositories/snapshots/</url>
         </repository>
     </repositories>
     <dependencies>
@@ -47,8 +47,8 @@
         </dependency>
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
-            <artifactId>ProtocolLib</artifactId>
-            <version>3.7.0-BETA</version>
+            <artifactId>ProtocolLib-API</artifactId>
+            <version>4.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
